--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
      <div class="container">
         
-        <textarea ></textarea>
+       <h3> <textarea ></textarea></h3>
         <div class="output row">
            <span id="wordCount">0</span>
           
