--- a/main.html
+++ b/main.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
-    <style>
-  * {
-    text-align: center;
-}
-    </style>
-<body >
 
-
-	<textarea id="evaluatedText" oninput="countWord()" rows="2" cols="20">
+<body>
+	<!-- the entire body must be written by student -->
+     	<textarea id="evaluatedText" oninput="countWord()" rows="2" cols="20">
 	</textarea>
 	<br><br>
 
@@ -22,29 +16,7 @@
 		<span id="show">0</span>
     </h3>
 
-	<script>
-		function countWord() {
-		
 
-			var words = document
-				.getElementById("evaluatedText").value;
-		
-			
-			var count = 0;
-		
-			
-			var split = words.split(' ');
-		
-			
-			for (var i = 0; i < split.length; i++) {
-				if (split[i] != "") {
-					count += 1;
-				}
-			}
-		
-			
-			document.getElementById("show")
-				.innerHTML = count;
-		}
-	</script>
 </body>
+
+</html>
