--- a/main.html
+++ b/main.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title
+					
 </head>
    
 <body >
@@ -18,3 +19,29 @@
 
 	
 </body>
+
+	<script>
+		function countWord() {
+		
+
+			var words = document
+				.getElementById("evaluatedText").value;
+		
+			
+			var count = 0;
+		
+			
+			var split = words.split(' ');
+		
+			
+			for (var i = 0; i < split.length; i++) {
+				if (split[i] != "") {
+					count += 1;
+				}
+			}
+		
+			
+			document.getElementById("wordCount")
+				.innerHTML = count;
+		}
+	</script>
